--- a/index.html
+++ b/index.html
@@ -107,9 +107,9 @@
 
             <!--Links-->
             <section>
-                <a target="_bLank" href=""></a><br>
-                <a target="_bLank" href=""></a><br>
-                <a target="_bLank" href=""></a><br>
+                <a target="_bLank" href="https://cloudstack12.github.io/bottomsupbikinis2/">https://cloudstack12.github.io/bottomsupbikinis2/</a><br>
+                <a target="_bLank" href="https://preeminent-jelly-322ed9.netlify.app/">https://preeminent-jelly-322ed9.netlify.app/</a><br>
+                <a target="_bLank" href="https://bottomsupbikinis2.s3.ap-northeast-1.amazonaws.com/bottomsupbikinis2/index.html">https://bottomsupbikinis2.s3.ap-northeast-1.amazonaws.com/bottomsupbikinis2/index.html</a><br>
             </section>
 
         </div>
